// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Motif test suite should generate createMotif based on chord 1`] = `
Array [
  Object {
    "dur": "4n",
    "midi": 64,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": "8nt",
    "midi": 68,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": "8n",
    "midi": 68,
    "note": "Ab3",
    "time": 640,
  },
  Object {
    "dur": "16n",
    "midi": 68,
    "note": "Ab3",
    "time": 880,
  },
  Object {
    "dur": "4nt",
    "midi": 64,
    "note": "E3",
    "time": 1000,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 1320,
  },
  Object {
    "dur": "8nd",
    "midi": 61,
    "note": "Db3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate createMotif based on chord 2`] = `
Array [
  Object {
    "dur": "4n",
    "midi": 64,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 480,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 720,
  },
  Object {
    "dur": "4n",
    "midi": 68,
    "note": "Ab3",
    "time": 960,
  },
  Object {
    "dur": "8nt",
    "midi": 64,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": "4n",
    "midi": 64,
    "note": "E3",
    "time": 1600,
  },
  Object {
    "dur": "4nt",
    "midi": 61,
    "note": "Db3",
    "time": 2080,
  },
  Object {
    "dur": "8n",
    "midi": 68,
    "note": "Ab3",
    "time": 2400,
  },
  Object {
    "dur": "4n",
    "midi": 68,
    "note": "Ab3",
    "time": 2640,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 3120,
  },
  Object {
    "dur": "8n",
    "midi": 68,
    "note": "Ab3",
    "time": 3360,
  },
  Object {
    "dur": "16n",
    "midi": 68,
    "note": "Ab3",
    "time": 3600,
  },
  Object {
    "dur": "16n",
    "midi": 68,
    "note": "Ab3",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 1`] = `
Array [
  Object {
    "dur": "4n",
    "midi": 73,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": "8nt",
    "midi": 76,
    "note": "E4",
    "time": 480,
  },
  Object {
    "dur": "8n",
    "midi": 78,
    "note": "F#4",
    "time": 640,
  },
  Object {
    "dur": "16n",
    "midi": 76,
    "note": "E4",
    "time": 880,
  },
  Object {
    "dur": "4nt",
    "midi": 74,
    "note": "D4",
    "time": 1000,
  },
  Object {
    "dur": "8n",
    "midi": 73,
    "note": "C#4",
    "time": 1320,
  },
  Object {
    "dur": "8nd",
    "midi": 69,
    "note": "A3",
    "time": 1560,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 2`] = `
Array [
  Object {
    "dur": "4n",
    "midi": 73,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": "8n",
    "midi": 74,
    "note": "D4",
    "time": 480,
  },
  Object {
    "dur": "8n",
    "midi": 71,
    "note": "B3",
    "time": 720,
  },
  Object {
    "dur": "4n",
    "midi": 76,
    "note": "E4",
    "time": 960,
  },
  Object {
    "dur": "8nt",
    "midi": 73,
    "note": "C#4",
    "time": 1440,
  },
  Object {
    "dur": "4n",
    "midi": 71,
    "note": "B3",
    "time": 1600,
  },
  Object {
    "dur": "4nt",
    "midi": 71,
    "note": "B3",
    "time": 2080,
  },
  Object {
    "dur": "8n",
    "midi": 76,
    "note": "E4",
    "time": 2400,
  },
  Object {
    "dur": "4n",
    "midi": 76,
    "note": "E4",
    "time": 2640,
  },
  Object {
    "dur": "8n",
    "midi": 74,
    "note": "D4",
    "time": 3120,
  },
  Object {
    "dur": "8n",
    "midi": 76,
    "note": "E4",
    "time": 3360,
  },
  Object {
    "dur": "16n",
    "midi": 76,
    "note": "E4",
    "time": 3600,
  },
  Object {
    "dur": "16n",
    "midi": 78,
    "note": "F#4",
    "time": 3720,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 1`] = `
Array [
  Object {
    "dur": "4n",
    "midi": 70,
    "note": "Bb3",
    "time": 0,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 2`] = `
Array [
  Object {
    "dur": "8n",
    "midi": 68,
    "note": "Ab3",
    "time": 480,
  },
  Object {
    "dur": "16n",
    "midi": 68,
    "note": "Ab3",
    "time": 720,
  },
  Object {
    "dur": "4nt",
    "midi": 64,
    "note": "E3",
    "time": 840,
  },
  Object {
    "dur": "8n",
    "midi": 64,
    "note": "E3",
    "time": 1160,
  },
  Object {
    "dur": "8nd",
    "midi": 61,
    "note": "Db3",
    "time": 1400,
  },
  Object {
    "dur": "8nt",
    "midi": 64,
    "note": "E3",
    "time": 1760,
  },
]
`;
